# performance-test-rust-node

./: .gitignore  package.json  serverless-compose.yml
.github/workflows/: cd.yml
load-test/: index.js  package.json
node/: main.js  serverless.yml
rust/: Cargo.toml  serverless.yml
rust/src/: main.rs
