[package]
name = "rust"
version = "0.1.0"
edition = "2021"
autobins = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
lambda_runtime = "0.4.1"
openssl = { version = "0.10", features = ["vendored"] }
simple_logger = "2.1"
log = "0.4"


[[bin]]
name = "bootstrap"
path = "src/main.rs"
